add head tag to index.html file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-
+	<head>
+		<title>Mortaza Karimi</title>
+	</head>
 	<body>
 		<h1>hi there, I'm Mortaza</h1>
 		<h2>hi there, I'm Mortaza</h2>
