add a span tag to index.html file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<body>
 		<h1>hi there, I'm Mortaza</h1>
 		<h2>hi there, I'm Mortaza</h2>
-		<h3>hi there, I'm Mortaza</h3>	
+		<h3>hi there, I'm Mortaza</h3>
+		<span>
+			this is new in mortaza branch
+		</span>
 	</body>
 </html>
